// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLink />  should match baseline snapshot of anchor 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 1.5em;
  height: 1.5em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c1 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  color: #4c81d6;
  cursor: pointer;
}

.c1:hover,
.c1:focus {
  color: #30c0f9;
}

.c0 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  cursor: pointer;
  opacity: .7;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0:focus,
.c0:hover {
  opacity: 1;
  outline: none;
}

.c0:active {
  opacity: 1;
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<a
  class="c0 c1"
  href="http://google.com"
  title="Does an action"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="ADD"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;

exports[`<IconLink />  should match baseline snapshot of react-router Link 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 1.5em;
  height: 1.5em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c1 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  color: #4c81d6;
  cursor: pointer;
}

.c1:hover,
.c1:focus {
  color: #30c0f9;
}

.c0 {
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  cursor: pointer;
  opacity: .7;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0:focus,
.c0:hover {
  opacity: 1;
  outline: none;
}

.c0:active {
  opacity: 1;
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<a
  aria-current="false"
  class="c0 c1"
  href="/path"
  title="Does an action"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="ADD"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;
